# x-settlers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua  premakeSDL_.txt
X-Settlers/assets/maps/: 4Circles.map
X-Settlers/assets/shader/: compile.bat  shader.vert
X-Settlers/src/: X-Settlers.cpp  X-Settlers.h
X-Settlers/src/Core/: Log.cpp  MapLoader.cpp  MapLoader.h  Window.h
X-Settlers/src/Logic/: Grid.h  Node.h  Playfield.cpp
X-Settlers/src/Platform/Windows/: WinWindow.cpp  WinWindow.h
X-Settlers/src/Renderer/: Renderer.cpp  Renderer.h  Vertex.h
android/src/main/res/values/: strings.xml
app/: x_settlers.cpp
app/android/: build.gradle
app/android/src/main/: AndroidManifest.xml
assets/shaders/vulkan/: shader.frag  vert.spv
cmake/modules/: FindAdb.cmake
docs/: Architecture.md  BUILD.md  Engine Layout.drawio  Used C Compiler Flags.txt
engine/: .gitignore  CMakeLists.txt  engine.h  pch.h
engine/core/: application.cpp  application.h  application_event.h  entry_point.h  input.h  key_codes.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.h  logger.cpp  logger.h  time_delta.h  timestep.h  window.cpp  window.h
engine/docs/: COMPONENTS.md  RENDERER.md
engine/docs/graphics/: index_buffer_sorting.drawio  texture_atlas.drawio  texture_mapping_edge_cases.drawio  vertex_layouts.drawio
engine/events/: app_event.h  application_event.h  event.h  key_event.h  mouse_event.h
engine/platform/: filesystem.cpp  filesystem.h  glfw_window.cpp  glfw_window.h  sdl_window.cpp  sdl_window.h  window.cpp  window.h
engine/platform/android/: android_window.cpp  android_window.h
engine/platform/gles/: gles_context.cpp  gles_context.h  gles_renderer_api.cpp  gles_renderer_api.h
engine/platform/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_texture_atlas.cpp  opengl_texture_atlas.h  opengl_vertex_array.cpp  opengl_vertex_array.h
engine/platform/windows/: windows_window.cpp  windows_window.h
engine/rendering/: buffer.cpp  buffer.h  graphics_context.cpp  graphics_context.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  render_command.cpp  render_command.h  renderer_2d _backup.cpp  renderer_2d.cpp  renderer_2d.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h  vertex_array.cpp  vertex_array.h
src/: X-Settlers.cpp  main.cpp
src/Core/: Layer.cpp  LayerStack.h  Log.cpp  Window.cpp  Window.h
src/Logic/: MapLoader.cpp  MapLoader.h  Movable.cpp  Movable.h  Node.h  Playfield.h  map_loader.h
src/Platform/Android/: AndroidWindow.cpp  AndroidWindow.h  android_window.cpp  android_window.h
src/Platform/Desktop/: DesktopWindow.cpp  DesktopWindow.h
src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  opengl_context.h  opengl_renderer_api.cpp  opengl_shader.cpp  opengl_shader.h
src/Platform/Vulkan/: VulkanBuffer.h  vulkan_buffer.h
src/Renderer/: Buffer.cpp  GraphicsContext.cpp  RenderCommand.cpp  RenderCommand.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Vertex.h
src/core/: layer.cpp  layer.h  layer_stack.h  log.h
src/logic/: map_loader.cpp  node.h
src/platform/: filesystem.h  sdl_window.h  window.cpp
src/platform/opengl/: ogl_buffer.cpp  opengl_context.cpp
src/rendering/: buffer.cpp  buffer.h  render_command.h  renderer_2d.cpp  renderer_api.cpp  renderer_api.h  shader.cpp
xsettlers/: CMakeLists.txt  game.cpp  game.h  xsettlers.cpp
xsettlers/assets/maps/s3/: Krakula.map  LowRes.map  medal.map
xsettlers/assets/maps/s4/: 192_1.map
xsettlers/assets/shader/opengl/: mesh.glsl  mesh_experimental.glsl  mesh_experimental_backup.glsl  quad.glsl  triangle.glsl  triangle_tilemap.glsl
xsettlers/assets/shader/vulkan/: frag.spv
xsettlers/assets/shaders/opengl/: map.glsl  quad.glsl  texture.glsl
xsettlers/docs/: MAPS.md  RENDERER.md  texture_mapping.txt
xsettlers/docs/graphics/: hexagonal_mapping.drawio  index_buffer_sorting.drawio  quadtree_aabb.drawio  quadtree_conversion.drawio  texture_types.drawio
xsettlers/layer/: game.cpp  interface.cpp  interface.h  landscape.cpp  landscape.h  terrain_layer.cpp  terrain_layer.h
xsettlers/logic/: map_loader.cpp  map_loader.h  movable.cpp  movable.h  node.h  playfield.cpp  playfield.h  texture_mapping.h
